--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-plugin-module-resolver": "^2.2.0",
     "babel-plugin-resolver": "1.1.0",
     "babel-preset-es2015": "^6.16.0",
+    "babel-preset-latest": "^6.16.0",
     "babel-preset-power-assert": "^1.0.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
